added clear button for inputs

--- a/template/css/bootstrap.css
+++ b/template/css/bootstrap.css
@@ -5,6 +5,22 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+.searchinput {
+    width: 200px;
+}
+.searchclear {
+    position: absolute;
+    right: 5px;
+    top: 0;
+    bottom: 0;
+    height: 14px;
+    margin: auto;
+    font-size: 14px;
+    cursor: pointer;
+    color: #ccc;
+}
+
 :root {
     --bs-blue: #0d6efd;
     --bs-indigo: #6610f2;
